--- a/part2/package.json
+++ b/part2/package.json
@@ -22,7 +22,14 @@
   },
   "devDependencies": {
     "@types/node": "^20.6.5",
+    "eslint": "^8.50.0",
+    "eslint-config-semistandard": "^17.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "nodemon": "^3.0.1",
+    "prettier": "^3.0.3",
     "tscpaths": "^0.0.9"
   }
 }
