--- a/part2/.gitignore
+++ b/part2/.gitignore
@@ -1,4 +1,44 @@
+# Envs files
 .env
+
+
+
+# compiled output
+dist
 node_modules
 package-lock.json
-./dist
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# OS
+.DS_Store
+
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# For openapi
+openapi/docs/*.json
+openapitools.json
