--- a/part2/package.json
+++ b/part2/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "ts:dev": "NODE_ENV=development nodemon --ext ts,js --exec ts-node -r dotenv/config app.ts",
+    "ts:dev": "NODE_ENV=development nodemon --ext ts,js --exec ts-node  -r tsconfig-paths/register -r dotenv/config app.ts",
     "ts:start": "NODE_ENV=production node -r dotenv/config dist/app.js",
     "build": "tsc --project tsconfig.json && tscpaths -p tsconfig.json -s ./ -o ./dist"
   },
@@ -14,13 +14,16 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.18",
+    "body-parser": "^1.20.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-requests-logger": "^4.0.0",
     "multer": "*",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/morgan": "^1.9.5",
     "@types/node": "^20.6.5",
     "eslint": "^8.50.0",
     "eslint-config-semistandard": "^17.0.0",
